--- a/minicourse-c#-.net/Api/appsettings.Development.json
+++ b/minicourse-c#-.net/Api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SqliteConnectionString": "Data Source=ToDoApi.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
